# ygm-bench

./: CMakeLists.txt  Readme.md
cmake/: setup_boost.cmake
include/: cli_helper.hpp  krowkee_helper.hpp  rmat_edge_generator.hpp  utility.hpp
scripts/: prepare_agups_ygm_header.sh  prepare_around_the_world_mpi_header.sh  prepare_around_the_world_ygm_header.sh  prepare_embed_rmat_ygm_header.sh  prepare_embed_ygm_header.sh  prepare_headers.sh  prepare_histo_rmat_ygm_header.sh  prepare_histo_ygm_header.sh  run_agups_ygm.sh  run_around_the_world_mpi.sh  run_around_the_world_ygm.sh  run_embed_rmat_ygm.sh  run_embed_ygm.sh  run_experiment_loop.sh  run_experiments.py  run_histo_rmat_ygm.sh  run_histo_ygm.sh  run_scaling_studies.py  run_ygm_bench.sh
src/: CMakeLists.txt  agups_ygm.cpp  around_the_world_mpi.cpp  around_the_world_probe.cpp  around_the_world_ygm.cpp  cc_ygm.cpp  embed_rmat_ygm.cpp  embed_ygm.cpp  histo_rmat_ygm.cpp  histo_ygm.cpp  rmat_example.cpp
